2008-09-05  Raja R Harinath  <harinath@hurrynot.org>

	* DataRowCollection.cs (RemoveInternal): Update RowIDs of rows
	after the deleted row.
	(IndexOf): Avoid loop to search for a row, since we already know
	where a row is: its RowID.
	(Remove): Use IndexOf rather than List.Contains.

	* DataRowCollection.cs (InsertRow): Delegate setting of RowId
	to the row itself.  Use 'row.AttachAt' instead of 'row.AttachRow'.
	(AddInternal): Likewise.  Also delegate handling of
	ChangeCurrentAndOriginal to AttachAt.
	* DataRow.cs (AttachAt): Rename from AttachRow.  Set rowId from
	passed-in id.  Handle ChangeCurrentAndOriginal and ChangeOriginal
	actions.

	* DataRow.cs (_hasParentCollection): Remove.  Implied by _rowId >= 0.
	(HasParentCollection): Remove.
	* DataRowCollection.cs (AddInternal, InsertAt): Update to changes.

	* DataTable.cs (NewRowArray): Special case size == 0 to avoid
	creating a lot of garbage.

	* DataRow.cs (Detach): Rename from DetachRow.  Make private.
	Simplify code to be more uniform.  Move common prefix code here ...
	(AcceptChanges) [Deleted]: ... from here ...
	(Delete) [Added]: ... and here ...
	(RejectChanges) [Added]: ... and here.

2008-09-04  Raja R Harinath  <harinath@hurrynot.org>

	* DataRow.cs (CheckChildRows) <1-arg variant>: Remove excessive
	indentation.
	(CheckChildRows) <3-arg variant>: Likewise.  Move/split loop
	inside a switch.
	(EndEdit): Out-dent some code.
	(IsNullColumns): Simplify slightly.

	* DataRelationCollection.cs (CanRemove): Simplify slightly.

	* DataRelation.cs (CheckStateForProperty): Use the childColumn to
	get the child table.

	* DataColumn.cs (AllowDBNull.set): Rearrange code to be more readable.
	(AutoIncrement.set): Likewise.
	(Caption): Likewise.
	(SetDefaultValue): Likewise.

2008-08-28  Raja R Harinath  <harinath@hurrynot.org>

	* Constraint.cs (SetExtendedProperties): New internal method.
	Move here from ...
	(ExtendedProperties.set): ... here.  Kill a #ifdef.